--- a/i18n/en.json
+++ b/i18n/en.json
@@ -25,6 +25,10 @@
     },
     "viewExercise": {
       "runOrVerify": "run or verify"
+    },
+    "setLocale": {
+      "header": "set locale",
+      "success": "Your locale has been successfully set! To finalize changing the locale, you have to restart the questline from the command line and reload this tab or open a new one!"
     }
   }
 }
