translate error message

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -29,6 +29,10 @@
     "setLocale": {
       "header": "sprache ändern",
       "success": "Die Sprache wurde erfolgreich geändert! Um die Änderungen zu übernehmen, musst du diese Questline von der Kommandozeile aus neu starten und diesen Browser-Tab neu laden oder neu öffnen!"
+    },
+    "error": {
+      "prefix": "Oh nein!",
+      "noQuestlineTranslations": "Es konnten keine Übersetzungen für diese Questline gefunden werden!"
     }
   }
 }
