implement error state when questline locale isnt found (closes #1)

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -32,7 +32,7 @@
     },
     "error": {
       "prefix": "Oh nein!",
-      "noQuestlineTranslations": "Es konnten keine Übersetzungen für diese Questline gefunden werden!"
+      "noQuestlineTranslations": "Es konnten keine Übersetzungen für diese Questline gefunden werden! Deine Sprache wurde temporär auf Englisch gesetzt."
     }
   }
 }
